--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -40,9 +40,11 @@
 <p id="status"></p>
 <hr />
 <div id="report"></div>
+
 <script type="module">
 import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
+/* ================= SUPABASE ================= */
 const supabase = createClient(
   "https://zcmzuetusvpmvubbjlmx.supabase.co",
   "sb_publishable_-BGJLAySaH7bQ5lBIZF9zg_eohK-xEn"
@@ -63,11 +65,11 @@ const filterBox = document.getElementById("filterBox");
 const reportDiv = document.getElementById("report");
 const status = document.getElementById("status");
 
-/* ========== AUTH ========== */
+/* ================= AUTH ================= */
 const { data: { user } } = await supabase.auth.getUser();
 if (!user) location.href = "index.html";
 
-/* ========== LOAD TERMS ========== */
+/* ================= LOAD TERMS ================= */
 const { data: terms } = await supabase
   .from("terms")
   .select("id, name")
@@ -77,7 +79,7 @@ termSelect.innerHTML =
   `<option value="">Select term</option>` +
   terms.map(t => `<option value="${t.id}">${t.name}</option>`).join("");
 
-/* ========== MAIN LOAD ========== */
+/* ================= MAIN ================= */
 async function loadReport() {
   reportDiv.innerHTML = "";
   filterBox.innerHTML = "";
@@ -88,21 +90,20 @@ async function loadReport() {
 
   const termName = terms.find(t => t.id === term_id)?.name;
 
-  /* ===== AVERAGES ===== */
+  /* ===== LOAD AVERAGES (KEYED BY ADMISSION) ===== */
   const { data: averages } = await supabase
     .from("term_subject_report_view")
-    .select("first_name,last_name,subject_name,average_score,achievement_level")
+    .select("admission_number,subject_name,average_score,achievement_level")
     .eq("term", termName)
     .eq("academic_year", SYSTEM_YEAR);
 
   const avgMap = {};
   averages.forEach(a => {
-    const student = `${a.first_name} ${a.last_name}`;
-    avgMap[student] ??= {};
-    avgMap[student][a.subject_name] = a;
+    avgMap[a.admission_number] ??= {};
+    avgMap[a.admission_number][a.subject_name] = a;
   });
 
-  /* ===== RAW RESULTS ===== */
+  /* ===== LOAD RAW RESULTS ===== */
   const { data } = await supabase
     .from("assessment_results")
     .select(`
@@ -119,66 +120,71 @@ async function loadReport() {
     return;
   }
 
-  /* ===== NORMALIZED RECORDS ===== */
+  /* ===== NORMALIZE ===== */
   const records = data.map(r => ({
-    student: `${r.students.first_name} ${r.students.last_name}`,
     admission: r.students.admission_number,
+    studentName: `${r.students.first_name} ${r.students.last_name}`,
     subject: r.competencies.subjects.name,
     competency: r.competencies.name,
     level: r.achievement_levels.label,
     remarks: r.remarks
   }));
 
-  /* ===== RENDER FUNCTION (ONE TABLE FORMAT) ===== */
-  function renderGrouped(grouped) {
-    return Object.entries(grouped).map(([student, subjects]) => `
-      <h4>👤 ${student}</h4>
-      ${Object.entries(subjects).map(([subject, rows]) => `
-        <h5>📘 ${subject}</h5>
-        <table>
-          <tr>
-            <th>Competency</th>
-            <th>Achievement</th>
-            <th>Remarks</th>
-          </tr>
+  /* ===== TABLE RENDER ===== */
+  function render(grouped) {
+    return Object.values(grouped).map(s => `
+      <h4>
+        👤 ${s.name}
+        <small style="color:#666">(Adm: ${s.admission})</small>
+      </h4>
 
-          ${rows.map(r => `
-            <tr style="background:${levelColor[r.level]}">
-              <td>${r.competency}</td>
-              <td>${r.level}</td>
-              <td>${r.remarks || "—"}</td>
+      ${Object.entries(s.subjects).map(([subject, rows]) => {
+        const avg = avgMap[s.admission]?.[subject];
+        return `
+          <h5>📘 ${subject}</h5>
+          <table>
+            <tr>
+              <th>Competency</th>
+              <th>Achievement</th>
+              <th>Remarks</th>
             </tr>
-          `).join("")}
 
-          ${avgMap[student]?.[subject] ? `
-            <tr style="background:${levelColor[avgMap[student][subject].achievement_level]}">
-              <td><strong>SUBJECT AVERAGE</strong></td>
-              <td colspan="2">
-                <strong>
-                  ${avgMap[student][subject].achievement_level}
-                  (Score ${avgMap[student][subject].average_score})
-                </strong>
-              </td>
-            </tr>
-          ` : ""}
-        </table>
-      `).join("")}
+            ${rows.map(r => `
+              <tr style="background:${levelColor[r.level]}">
+                <td>${r.competency}</td>
+                <td>${r.level}</td>
+                <td>${r.remarks || "—"}</td>
+              </tr>
+            `).join("")}
+
+            ${avg ? `
+              <tr style="background:${levelColor[avg.achievement_level]}">
+                <td><strong>SUBJECT AVERAGE</strong></td>
+                <td colspan="2">
+                  <strong>${avg.achievement_level} (Score ${avg.average_score})</strong>
+                </td>
+              </tr>
+            ` : ""}
+          </table>
+        `;
+      }).join("")}
     `).join("");
+  }
+
+  /* ===== GROUPERS ===== */
+  function groupBy(list) {
+    const g = {};
+    list.forEach(r => {
+      g[r.admission] ??= { name: r.studentName, admission: r.admission, subjects: {} };
+      g[r.admission].subjects[r.subject] ??= [];
+      g[r.admission].subjects[r.subject].push(r);
+    });
+    return g;
   }
 
   /* ===== TERM VIEW ===== */
   if (viewMode.value === "term") {
-    const grouped = {};
-    records.forEach(r => {
-      grouped[r.student] ??= {};
-      grouped[r.student][r.subject] ??= [];
-      grouped[r.student][r.subject].push(r);
-    });
-
-    reportDiv.innerHTML = `
-      <h3>${termName} – ${SYSTEM_YEAR}</h3>
-      ${renderGrouped(grouped)}
-    `;
+    reportDiv.innerHTML = `<h3>${termName} – ${SYSTEM_YEAR}</h3>` + render(groupBy(records));
   }
 
   /* ===== STUDENT VIEW ===== */
@@ -191,27 +197,15 @@ async function loadReport() {
     document.getElementById("admInput").addEventListener("input", e => {
       const adm = e.target.value.trim();
       const filtered = records.filter(r => r.admission === adm);
-
-      if (!filtered.length) {
-        reportDiv.innerHTML = "<p>No student found</p>";
-        return;
-      }
-
-      const grouped = {};
-      filtered.forEach(r => {
-        grouped[r.student] ??= {};
-        grouped[r.student][r.subject] ??= [];
-        grouped[r.student][r.subject].push(r);
-      });
-
-      reportDiv.innerHTML = renderGrouped(grouped);
+      reportDiv.innerHTML = filtered.length
+        ? render(groupBy(filtered))
+        : "<p>No student found</p>";
     });
   }
 
   /* ===== SUBJECT VIEW ===== */
   if (viewMode.value === "subject") {
     const subjects = [...new Set(records.map(r => r.subject))];
-
     filterBox.innerHTML = `
       <label>Subject</label><br />
       <select id="subjectSelect">
@@ -222,21 +216,10 @@ async function loadReport() {
 
     document.getElementById("subjectSelect").addEventListener("change", e => {
       const subject = e.target.value;
-      if (!subject) return;
-
       const filtered = records.filter(r => r.subject === subject);
-      const grouped = {};
-
-      filtered.forEach(r => {
-        grouped[r.student] ??= {};
-        grouped[r.student][r.subject] ??= [];
-        grouped[r.student][r.subject].push(r);
-      });
-
-      reportDiv.innerHTML = `
-        <h3>${subject} – All Students</h3>
-        ${renderGrouped(grouped)}
-      `;
+      reportDiv.innerHTML = filtered.length
+        ? `<h3>${subject} – All Students</h3>` + render(groupBy(filtered))
+        : "";
     });
   }
 }
@@ -244,6 +227,7 @@ async function loadReport() {
 termSelect.addEventListener("change", loadReport);
 viewMode.addEventListener("change", loadReport);
 </script>
+
 
 </body>
 </html>
